# syscovis

./: .gitignore  README.md  pyproject.toml
src/syscovis/: __init__.py
src/syscovis/plotter/: __inin__.py  plotter.py  test_plotter.py
