[project]
name = "syscovis"
version = "0.1.0"
description = "Visualizaton for System and Control tasks"
readme = "README.md"
authors = [{ name = "Silvan Stadelmann", email = "silvasta3@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "rich>=14.1.0",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
