[project]
name = "syscovis"
version = "0.1.1b1"
classifiers = ["Development Status :: 3 - Alpha"]
description = "Visualizaton for System and Control tasks"
keywords = [
  "science",
  "engineering",
  "visualizaton",
  "systems",
  "controls",
  "controller",
  "discrete-time",
  "model-based",
  "data-driven",
]
license = { text = "Apache License 2.0" }
readme = "README.md"
authors = [{ name = "Silvan Stadelmann", email = "silvasta3@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["loguru>=0.7.3", "matplotlib>=3.10.3", "rich>=14.1.0"]

[project.urls]
Repository = "https://github.com/silvasta/syscovis"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
